# py_exec

./: .dockerignore  .env.example  .gitignore  docker-compose.yml  dockerfile.django  dockerfile.django.worker  dockerfile.sandbox  entrypoint.sandbox.sh  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
django_prog/: asgi.py  celery.py  manage.py  settings.py  urls.py  wsgi.py
django_prog/common/: admin.py  func.py
django_prog/common/templates/admin/: submit_line.html
django_prog/common/templates/admin/common/: change_form.html
django_prog/django_prog/: asgi.py  settings.py  urls.py  wsgi.py
django_prog/integrations/: languages.py
django_prog/integrations/env_script/: interfaces.py  piston.py  repository.py
django_prog/script/: admin.py  api.py  apps.py  forms.py  models.py  script_inline.py
django_prog/script/migrations/: 0001_initial.py
django_prog/task/: script.py
static/admin/js/: script_info_updater.js
