[project]
name = "django_prog"
version = "0.1.0"
description = ""
authors = [
    {name = "Veronelli"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2,<6.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "django-ace (>=1.39.2,<2.0.0)",
    "celery (>=5.5.2,<6.0.0)",
    "redis (>=6.1.0,<7.0.0)",
    "pistonpy (>=0.0.3,<0.0.4)",
    "django-ninja (>=1.4.3,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
